--- a/src/pages/login-section/otp/otp.html
+++ b/src/pages/login-section/otp/otp.html
@@ -20,7 +20,7 @@
 		<div class="center-block">
 		<div class="mobile-login">
 			<div class="text">
-				<p>{{'Enter your 4 digit number that has been send to' | translate}} <span class="blue-color lineh24">91+ {{mobile_no}}</span></p>
+				<p>{{'Enter your 4 digit number that has been send to' | translate}} <span class="blue-color lineh24">+91 {{mobile_no}}</span></p>
 			</div>
 			<div class="input-section">
 				<div class="input-adjust m16 mb0">
