--- a/src/pages/product-detail/product-detail.html
+++ b/src/pages/product-detail/product-detail.html
@@ -29,4 +29,13 @@
 			<i class="material-icons">trending_flat</i>
 		</button>
     </div>
+
+    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)"  *ngIf="flag!=1">
+        <ion-infinite-scroll-content
+            loadingSpinner="bubbles"
+            loadingText="{{'Loading more data...' | translate}}">
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
+    
 </ion-content>
