--- a/src/pages/product-subdetail/product-subdetail.html
+++ b/src/pages/product-subdetail/product-subdetail.html
@@ -11,16 +11,17 @@
     
     <div class="slide-image h200">
         <!-- zoom="true" -->
-        <ion-slides class="cs-slide" *ngIf="prod_detail.image && prod_detail.image.length>1" [initialSlide]="0" pager autoplay="1000" speed="1000" loop="true">
+        <!-- <ion-slides class="cs-slide" *ngIf="prod_detail.image && prod_detail.image.length>1" [initialSlide]="0" pager autoplay="1000" speed="1000" loop="true">
             <ion-slide *ngFor="let row of prod_detail.image; let i=index" (click)="viewDetail(row.image_name)">
                 <div class="swiper-zoom-container">
+                    <h2>{{upload_url+row.image_name}}</h2>
                     <img [src]="upload_url+row.image_name">
                 </div>
             </ion-slide>
-        </ion-slides>
-        <!-- <div class="swiper-zoom-container" *ngIf="prod_detail.image && prod_detail.image.length==1">
-            <img [src]="upload_url+prod_detail_image[0].image_name">
-        </div> -->
+        </ion-slides> -->
+        <div class="swiper-zoom-container">
+            <img [src]="upload_url+prod_detail.image_name" (click)="viewDetail(prod_detail.image_name)">
+        </div>
 
         <div class="swiper-zoom-container"  *ngIf="prod_detail.image && prod_detail.image.length== []">
             <img src="assets/imgs/default-image.png" class="h90">
