--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -1,7 +1,7 @@
 
 <ion-header>
     <ion-navbar>
-        <ion-title>{{'Products' | translate}}</ion-title>
+        <ion-title>{{'Category' | translate}}</ion-title>
     </ion-navbar>
 </ion-header>
 
