--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -18,7 +18,7 @@
 					</div>
 					<div class="location brd-btm" >
 						<i class="material-icons">location_on</i>
-						<p>Hafizpur Road, Vil, Damla, Yamuna Nagar - 135001, Haryana India</p>
+						<p>Hafizpur Road, Vill. Damla, Yamuna Nagar - 135001, Haryana, India</p>
 					</div>
 					<div class="location">
 						<i class="material-icons">phone</i>
