--- a/src/pages/offers/offers.html
+++ b/src/pages/offers/offers.html
@@ -13,7 +13,8 @@
 
     <!-- <div class="fix"></div> -->
     <div class="bg-banner">
-        <img src="{{offer_detail.offer_banner}}">
+        <!-- {{offer_detail.offer_banner}}" -->
+        <img src="{{uploadUrl + offer_detail.banner}}">
     </div>
     <div class="content-padding">
         <div class="offer">
@@ -53,7 +54,8 @@
                 </div>
             </div>  
             <div class="product-img">
-                <img src="{{list.image}}">
+                <img src="{{uploadUrl + list.gift_image}}">
+                <!-- <img src="{{list.image}}"> -->
             </div>
         </button>
         <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)" *ngIf="flag!=1">
