--- a/src/pages/shipping-detail/shipping-detail.html
+++ b/src/pages/shipping-detail/shipping-detail.html
@@ -53,9 +53,9 @@
                 <div class="phone-head">
                     <h1>{{gift_detail.gift_title}}</h1>
                 </div>
-                <div class="phone-img">
+                <div class="phone-img" style="height: inherit;">
                     <!-- <img [src]="upload_url+gift_detail.gift_image"> -->
-                    <img [src]="gift_detail.image">
+                    <img src="{{upload_url + gift_detail.gift_image}}" alt="">
                 </div>
             </div>
             <div class="lorem-text" *ngIf="gift_detail.gift_specification != ''">
