--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -43,7 +43,7 @@
     <div class="pr-grid">
         <div class="le-ft" (click)="viewProfiePic()">
             <!-- <i class="material-icons">person</i> -->
-            <img src="{{karigar_detail.profile}}">
+            <img src="{{uploadUrl + karigar_detail.profile}}">
         </div>
         <div class="ri-ght">
             <div class="align-ri">
