--- a/src/pages/cancelation-policy/cancelation-policy.html
+++ b/src/pages/cancelation-policy/cancelation-policy.html
@@ -1,13 +1,18 @@
 
 <ion-header>
-  <ion-navbar>
-    <ion-title>Cancelation policy</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-	<div class="policy-text">
-		<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, </p>
-		<p>sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata</p>
-	</div>
-</ion-content>
+	<ion-navbar>
+		<ion-title>{{'Cancellation Policy' | translate}}</ion-title>
+		<div class="header-icons">
+			<button ion-button class="cs-hdr-icons mr16" (click)="closmodal()">
+				<i class="material-icons">clear</i>
+			</button>
+		</div>
+	</ion-navbar>
+  </ion-header>
+  
+  <ion-content padding>
+	  <div class="policy-text">
+		  <p [innerHTML]="get_cancellation_policy"></p>
+	  </div>
+  </ion-content>
+  
