--- a/src/pages/gift-gallery/gift-detail/gift-detail.html
+++ b/src/pages/gift-gallery/gift-detail/gift-detail.html
@@ -43,9 +43,7 @@
             <p>{{rating_star}} {{'Star' | translate}} - {{gift_detail.votes}} {{'Votes' | translate}} </p>
         </div>
         <div class="lorem-text">
-            <p>
-                <Strong>{{'Specification' | translate}} : <div [innerHTML]="lang !='en' ? gift_detail.hin_gift_specification : gift_detail.gift_specification"></div> </Strong>
-            </p>
+            <Strong>{{'Specification' | translate}} :  </Strong><span [innerHTML]="lang !='en' ? gift_detail.hin_gift_specification : gift_detail.gift_specification"></span>
         </div>
         <button ion-item class="cs-btn btn-radius mb0" (click)="presentCancelPolicyModal()" *ngIf="offer_balance >= gift_detail.coupon_points">{{'Send Redeem Request' | translate}}</button>
         <div class="h32"></div>
