--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -95,9 +95,9 @@
     </div>
     <div class="adhar">
 
-        <img src="{{uploadUrl + karigar_detail.document_image}}">
+        <img src="{{uploadUrl + karigar_detail.document_image}}" (click)="viewDoc()">
 
-        <img src="{{uploadUrl + karigar_detail.document_image_back}}" *ngIf="karigar_detail.document_image_back != ''">
+        <img src="{{uploadUrl + karigar_detail.document_image_back}}" *ngIf="karigar_detail.document_image_back != ''" (click)="viewDocBack()">
 
         <!-- <img src="{{karigar_detail.document_image ? karigar_detail.document_image : 'assets/imgs/adhar.png'}}">
         <img src="{{karigar_detail.document_image_back ? karigar_detail.document_image_back : 'assets/imgs/adhar.png'}}"> -->
