--- a/src/pages/cancelpolicy-modal/cancelpolicy-modal.html
+++ b/src/pages/cancelpolicy-modal/cancelpolicy-modal.html
@@ -9,7 +9,7 @@
     <div class="modal-center">
         <div class="modal-content in-modal">
             <form #f="ngForm">
-                <h1>{{'Grassim' | translate}} </h1>
+                <h1>{{'Kridha Laminates' | translate}} </h1>
                 <p>{{ 'Are you sure to redeem your' | translate }} {{redeemPoint}} {{'Points' | translate}}? </p>
                 <div class="number-content">
                     <p>{{'Enter your 6 digit number that sent to' | translate}} <span class="blue-color lineh24">+91 {{data.mobile_no}}</span>
