--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,7 +7,7 @@
 <ion-content padding>
 	<div class="nev-adjust">
 		<div class="background hp100">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d6903.998228927843!2d77.2080931!3d30.0942117!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x390ef81b10585b19%3A0xd8b70f1b93c1f141!2sGRASSIM%20PLYWOOD%20(%20Shree%20Ram%20Steel%20Industries%20)%20Hafizpur%20-%20Damla%20Rd%20Damla%2C%20Haryana%20135001!3m2!1d30.0942117!2d77.2080931!5e0!3m2!1sen!2sin!4v1638871736794!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d28134.885490981866!2d79.560053!3d28.181152!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb008327aaf475bf!2sKridha%20laminates%20pvt%20ltd!5e0!3m2!1sen!2sin!4v1645509600343!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</div>
 		
 		<div class="cs-nevigation">
@@ -18,15 +18,15 @@
 					</div>
 					<div class="location brd-btm" >
 						<i class="material-icons">location_on</i>
-						<p>Hafizpur Road, Vill. Damla, Yamuna Nagar - 135001, Haryana, India</p>
+						<p>Opp. Hariyali Petrol Pump, Faridpur Bareilly, 243201</p>
 					</div>
 					<div class="location">
 						<i class="material-icons">phone</i>
-						<a href="tel:9812227988">+91 9812227988</a>
+						<a href="tel: 18002746911"> 1800-274-6911</a>
 					</div>
 					<div class="location">
 						<i class="material-icons">email</i>
-						<a href="mailto:office@grassimply.com"> office@grassimply.com</a>
+						<a href="mailto:info@kridhalam.com"> info@kridhalam.com</a>
 					</div>
 				</div>
 			</div>
