--- a/src/pages/points/point-list/point-list.html
+++ b/src/pages/points/point-list/point-list.html
@@ -27,11 +27,11 @@
       <ion-segment [(ngModel)]="history">
         
         <ion-segment-button value="scanned">
-          <span class="black">{{ 'Scanned Points' | translate }}</span>
+          <span>{{ 'Scanned Points' | translate }}</span>
         </ion-segment-button>
         
         <ion-segment-button value="referral">
-          <span class="black">{{ 'Referral Points' | translate }}</span>
+          <span>{{ 'Referral Points' | translate }}</span>
         </ion-segment-button>
       </ion-segment>
     </div>
