--- a/src/pages/aboutus-modal/aboutus-modal.html
+++ b/src/pages/aboutus-modal/aboutus-modal.html
@@ -7,9 +7,9 @@
 <ion-content padding>
     <div class="main-modal">
         <div class="modal-box">
-            <h1>{{'Grassim' | translate}}</h1>
-            <h2>{{'Your request to access the Grassim  is under review. You will be able to log in as soon as the overseeing dealer acknowledges your application' | translate}}.</h2>
-            <p>{{'Meanwhile, you can contact us' | translate}} <a href="tel:9812227988">+91 9812227988</a> {{'or mail us' | translate}} <span> office@grassimply.com</span> {{'if you any question' | translate}}.</p>
+            <h1>{{'Kridha Laminates' | translate}}</h1>
+            <h2>{{'Your request to access the Kridha Laminates is under review. You will be able to log in as soon as the overseeing dealer acknowledges your application' | translate}}.</h2>
+            <p>{{'Meanwhile, you can contact us' | translate}} <a href="tel:18002746911">1800-274-6911</a> {{'or mail us' | translate}} <span> info@kridhalam.com</span> {{'if you any question' | translate}}.</p>
             <div class="modal-cls" (click)="gotoHomePage()">
                 <i class="material-icons">cancel</i>
             </div>
