--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
         <ion-title>
             <div class="company-logo">
                 <img src="assets/imgs/logo.png">
-                <span  class="reward-text"> REWARDS</span>
+                <!-- <span  class="reward-text"> REWARDS</span> -->
 
             </div>
         </ion-title>
