--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -69,8 +69,15 @@
                     </li>
                     <li class="bdr-top bdr-left">
                         <p>{{'Date of Anniversary' | translate}}</p>
-                        <h1>{{(karigar_detail.doa !='') ? (karigar_detail.doa| date:'d MMM,y'):('N/A')}} </h1>
+                        <h1 *ngIf="karigar_detail.doa !='0000-00-00'">{{karigar_detail.doa | date:'d MMM,y'}} </h1>
+                        <h1 *ngIf="karigar_detail.doa =='0000-00-00'">N/A</h1>
                     </li>
+                    <li class="bdr-top wp100" *ngIf="karigar_detail.gst_no">
+                        <p>{{karigar_detail.number_type}}</p>
+                        <h1>{{karigar_detail.gst_no}}
+                        </h1>
+                    </li>
+                   
                     <li class="bdr-top wp100" *ngIf="karigar_detail.email">
                         <p>{{'Email ID' | translate}}</p>
                         <h1>{{karigar_detail.email}}
@@ -86,34 +93,29 @@
             </div>
         </div>
     </div>
+    <ng-container *ngIf="karigar_detail.user_type == 2">
+        <div class="heading line mt18 mb16">
+            <p>{{'Letter Head' | translate}}</p>
+        </div>
+        <div class="adhar">
+            <img src="{{uploadUrl + karigar_detail.letter_image}}" (click)="viewletter()">
+        </div>
+    </ng-container>
     <div class="heading line mt18 mb16">
         <p>{{'Document Information' | translate}}</p>
-        <!-- <div class="little-edit">
-            <a *ngIf="edit1==''"><i class="material-icons" (click)="onUploadChange();edit1 = '1' ">edit</i></a>
-            <a *ngIf="edit1=='1'"><i class="material-icons" (click)="uploadDocImage(karigar_detail.document_image,karigar_detail.document_no)">save</i></a>
-        </div> -->
     </div>
     <div class="adhar">
-
         <img src="{{uploadUrl + karigar_detail.document_image}}" (click)="viewDoc()">
-
         <img src="{{uploadUrl + karigar_detail.document_image_back}}" *ngIf="karigar_detail.document_image_back != ''" (click)="viewDocBack()">
-
-        <!-- <img src="{{karigar_detail.document_image ? karigar_detail.document_image : 'assets/imgs/adhar.png'}}">
-        <img src="{{karigar_detail.document_image_back ? karigar_detail.document_image_back : 'assets/imgs/adhar.png'}}"> -->
         <p>{{karigar_detail.document_type=='Adharcard'? 'Adhar card' : (karigar_detail.document_type=='PanCard' ? 'Pan Card' : 'Voter Card') }}</p>
         <h1>
             <input class="dochidenumber" type="text" name="document_no " #document_no="ngModel" [(ngModel)]="karigar_detail.document_no" [readonly]="edit1 == '1'  ? false : true" required>
         </h1>
     </div>
-    <div class="heading line mt32" *ngIf="karigar_detail.user_type==1">
+    <div class="heading line mt32">
         <p >{{'Dealer Information' | translate}}</p>
-        <!-- <div class="little-edit">
-            <a *ngIf="edit==''"><i class="material-icons" (click)="edit = '1' ">edit</i></a>
-            <a *ngIf="edit=='1'"><i class="material-icons" (click)="editDealer()">save</i></a>
-        </div> -->
     </div>
-    <div class="pr-after" *ngIf="karigar_detail.user_type==1">
+    <div class="pr-after">
         <div class="profile-detail bdr-none p0">
             <div class="deflex mt0">
                 <ul>
